# screenCamera

./: .gitignore  CMakeLists.txt  README.md
include/: screenCamera.h
src/: screenCamera.cpp
